--- a/package.json
+++ b/package.json
@@ -3,28 +3,34 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.1.4",
+    "graphql": "^16.11.0",
+    "graphql.macro": "^1.4.2",
     "immutability-helper": "^3.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.8.0",
-    "react-slick": "^0.30.1",
+    "jquery": "^3.7.1",
+    "postcss-selector-parser": "^7.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
+    "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.8",
-    "web-vitals": "^3.5.2"
+    "styled-components": "^6.1.18",
+    "typescript": "^5.8.3",
+    "web-vitals": "^5.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,6 +52,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0",
+    "ajv": "^8.17.1",
+    "gh-pages": "^6.3.0",
+    "graphql-tag": "^2.12.6"
   }
 }
