--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "craco start",
-    "build": "craco build",
+    "build": "cross-env CI=false craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
@@ -55,6 +55,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "ajv": "^8.17.1",
+    "cross-env": "^7.0.3",
     "gh-pages": "^6.3.0",
     "graphql-tag": "^2.12.6"
   }
